fix: correct gaps above error message

--- a/blocks/popup/__error-message/popup__error-message.css
+++ b/blocks/popup/__error-message/popup__error-message.css
@@ -7,8 +7,10 @@
     font-weight: 400;
     color: #f00;
     border: none;
-    margin: 5px auto 0;
-    visibility: hidden;
+    margin: 0 auto;
+    opacity: 0;
+    display: flex;
+    transition: opacity 0.5 ease;
 }
 
 @media screen and (max-width: 1060px) {
