--- a/blocks/popup/__item/_el/popup__item_el_name.css
+++ b/blocks/popup/__item/_el/popup__item_el_name.css
@@ -1,3 +1,3 @@
 .popup__item_el_name {
-    margin-bottom: 29px;
+    margin-bottom: 5px;
 }
