--- a/blocks/popup/__item/_el/popup__item_el_place.css
+++ b/blocks/popup/__item/_el/popup__item_el_place.css
@@ -1,3 +1,3 @@
 .popup__item_el_place {
-    margin-bottom: 29px;
+    margin-bottom: 5px;
 }
