--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -10,7 +10,7 @@
     font-size: 18px;
     font-weight: 400;
     padding: 13px 0;
-    margin: 0;
+    margin: 20px 0;
     cursor: pointer;
 }
 
